{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 113,
  "lineage": "e4a88cdd-4deb-3a97-c7d8-3c78c308d38c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:648767092427:security-group/sg-0c83c9212447e49ea",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0c83c9212447e49ea",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "648767092427",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-09d8bb549b0310479"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:648767092427:internet-gateway/igw-042d7ceac6a70e47b",
            "id": "igw-042d7ceac6a70e47b",
            "owner_id": "648767092427",
            "tags": {
              "Name": "mongodb-internet-gateway"
            },
            "tags_all": {
              "Name": "mongodb-internet-gateway"
            },
            "vpc_id": "vpc-09d8bb549b0310479"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:648767092427:route-table/rtb-02de696c61166c3e5",
            "id": "rtb-02de696c61166c3e5",
            "owner_id": "648767092427",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-042d7ceac6a70e47b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table"
            },
            "tags_all": {
              "Name": "route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d8bb549b0310479"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de969f472a6ce1ba",
            "route_table_id": "rtb-02de696c61166c3e5",
            "subnet_id": "subnet-0aa88accc2b853255"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.my_route_table",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:648767092427:subnet/subnet-0aa88accc2b853255",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa88accc2b853255",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "648767092427",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mongodb-subnet"
            },
            "tags_all": {
              "Name": "mongodb-subnet"
            },
            "vpc_id": "vpc-09d8bb549b0310479"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:648767092427:vpc/vpc-09d8bb549b0310479",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03bdbd098e83de51a",
            "default_route_table_id": "rtb-0f658d56dd5de4a7d",
            "default_security_group_id": "sg-0c83c9212447e49ea",
            "dhcp_options_id": "dopt-0656f6f554cf2e95d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09d8bb549b0310479",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f658d56dd5de4a7d",
            "owner_id": "648767092427",
            "tags": {
              "Name": "mongobd-vpc-hello"
            },
            "tags_all": {
              "Name": "mongobd-vpc-hello"
            }
          }
        }
      ]
    }
  ]
}